background: Drop dead background screenshot code

The screenshot was only trying to capture gnome-shell's top bar to
overlay on the background preview but now on 3.26 the top bar might be
transparent which obviously wouldn't work at all for previewing a
different wallpaper.

https://bugzilla.gnome.org/show_bug.cgi?id=788206